# ivp-inventarios-viales

./: README.md  config.json  pyproject.toml
src/: 100-rename-images-by-date.py  200-process-data.ipynb  200-reduce-images-size.py  300-reduce-images-size.py  config.py  main.py  paths.json
src/input/: data.xlsx
src/tmp/pickle/: processed_data.pkl
