[project]
name = "inventario-v2-ar692"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "utm>=0.8.0",
]
